# MilliMQ

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  file_handle_pool.cpp  file_handle_pool.h  index_manager.cpp  index_manager.h  main.cpp  main_network.cpp  message_codec.cpp  message_codec.h  network_server.cpp  network_server.h  protocol.cpp  protocol.h  segment_file.cpp  segment_file.h  segment_manager.cpp  segment_manager.h
tests/: bench_produce.cpp  test_client_final.cpp  test_file_handle_pool.cpp  test_message_codec.cpp  test_protocol.cpp  test_segment_manager.cpp
